# maida_control

./: .gitignore  README.md  database.sql  deploy_scp.sh  favomusic.html  favorite_update_music.html  index.html  maimai-cookies.json  maimai-mobile.html  maimai-musicList.html  package-lock.json  package.json  proxy.js  vite.config.js
.cargo/: config.toml
certs/: ca.cnf  local-ca-cert.pem  local-ca-cert.srl  local-ca-key.pem  localhost-cert.pem  localhost-key.pem  localhost.csr  openssl.cnf
maida_control_server/: .env  Cargo.toml
maida_control_server/.cargo/: config.toml
maida_control_server/mai_api/: Cargo.toml
maida_control_server/mai_api/src/: aes_pkcs7.rs  aimedb.rs  config.rs  helper_get_user_music_detail.rs  lib.rs  music_data.rs  title_server.rs  utils.rs
maida_control_server/proxy/: Cargo.toml
maida_control_server/proxy/src/: lib.rs  maimai.rs
maida_control_server/src/: handlers.rs  logger.rs  main.rs  models.rs  services.rs  test.rs
maida_control_server/src/mobile_handle/: mod.rs  vo.rs
proxy/: Cargo.toml
proxy/src/: maimai.rs  main.rs
public/: cert.html
public/clashconf/: maida.yaml
src/: main.js
src/components/: aime.vue  clash.vue  favorites.vue  home.vue
src/lib/: api.ts  request.ts  router.ts
