[package]
name = "maida_control_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libs ={path = "../../yamaida-bot/libs"}
tower-http = { version = "0.6.6", features = ["cors"] }
proxy={path = "proxy"}
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = "1.0.99"