[package]
name = "maida_control_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.99"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libs ={path = "../../yamaida-bot/libs"}
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = true }
