[package]
name = "maida_control_server"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libs ={path = "../../yamaida-bot/libs"}
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1"
proxy = { path = "proxy" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
