[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
httparse = "1.8"
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = "1.0.99"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = {version = "1.0.142"}