[package]
name = "mai_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.99"
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql","runtime-tokio-rustls", "macros" ] }
log = "0.4"
env_logger = "0.9"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
flate2="1.1.2"
md5 = "0.7"
serde_json = "1.0.140"
chrono = "0.4.41"
sha2 = "0.10.9"
regex = "1.11.1"
lazy_static = "1.5.0"
headless_chrome = "1.0.17"
base64 = "0.22.1"
reqwest= { version = "0.12.20", features = ["json", "blocking","rustls-tls"] }
serde={version = "1.0.219"}
serde_derive = "1.0.219"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros"] }
