[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
[lib]
name = "proxy"
[dependencies]
log = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
httparse = "1.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1.0.99"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = {version = "1.0.142"}
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros"] }
dotenvy = "0.15"
